src/test/resources/sem/bad/prog4.ilang
routine main(x: integer, y, flag: boolean) is
  var a: is 42 - * x
  var b is x + * a

  print x
end
